force-app/main/default/objects/InterviewEventCandidate__c/InterviewEventCandidate__c.object-meta.xml
<CustomObject>
    <label>Interview Event Candidate</label>
    <nameField>
        <displayFormat>IEC-{00000}</displayFormat>
        <label>Interview Event Candidate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Event Candidate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>