force-app/main/default/objects/InterviewEventCandidate__c/fields/Aggregated_Score__c.field-meta.xml
<CustomField>
    <fullName>Aggregated_Score__c</fullName>
    <label>Aggregated Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>