force-app/main/default/objects/InterviewEventCandidate__c/fields/Candidate_Level__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Level__c</fullName>
    <label>Candidate Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Candidate_Level</valueSetName>
    </valueSet>
</CustomField>