force-app/main/default/objects/InterviewEventCandidate__c/fields/Code_Pair__c.field-meta.xml
<CustomField>
    <fullName>Code_Pair__c</fullName>
    <label>Code Pair</label>
    <type>Url</type>
</CustomField>