force-app/main/default/objects/InterviewEventCandidate__c/fields/Current_Interviewers__c.field-meta.xml
<CustomField>
    <fullName>Current_Interviewers__c</fullName>
    <label>Current Interviewers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>