force-app/main/default/objects/InterviewEventCandidate__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CandidateEventStatus</valueSetName>
    </valueSet>
</CustomField>