force-app/main/default/objects/InterviewEventCandidate__c/fields/Google_Meet__c.field-meta.xml
<CustomField>
    <fullName>Google_Meet__c</fullName>
    <label>Google Meet</label>
    <type>Url</type>
</CustomField>