force-app/main/default/objects/InterviewEventCandidate__c/fields/Hire_Status__c.field-meta.xml
<CustomField>
    <fullName>Hire_Status__c</fullName>
    <label>Hire Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hire_Status</valueSetName>
    </valueSet>
</CustomField>