force-app/main/default/objects/InterviewEventCandidate__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ongoing Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Interview Event Candidate</relationshipLabel>
    <relationshipName>Interview_Event_Candidate</relationshipName>
    <type>Lookup</type>
</CustomField>