force-app/main/default/objects/InterviewEventCandidate__c/fields/Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL__c</fullName>
    <formula>Candidate__r.Meeting_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting URL</label>
    <type>Text</type>
</CustomField>