force-app/main/default/objects/InterviewEventCandidate__c/fields/Ongoing_Interview__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ongoing Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Ongoing Interview Event Candidates</relationshipLabel>
    <relationshipName>Ongoing_Interview_event_candidates</relationshipName>
    <type>Lookup</type>
</CustomField>