force-app/main/default/objects/InterviewEventCandidate__c/fields/Previous_Interview__c.field-meta.xml
<CustomField>
    <fullName>Previous_Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Interview Event Candidate (Previous Interview)</relationshipLabel>
    <relationshipName>Interview_Event_Candidate1</relationshipName>
    <type>Lookup</type>
</CustomField>