force-app/main/default/objects/InterviewEventCandidate__c/fields/Total_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Total_Interactions__c</fullName>
    <label>Total Interactions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>